aguss787.sso.0068e5cd707df05274ba7684ce40a9594f5cb3b7
Running as unit: run-p1447057-i14027165.scope; invocation ID: 429941cf95c842078406beaf3d811956
   Compiling proc-macro2 v1.0.81
   Compiling unicode-ident v1.0.12
    Checking cfg-if v1.0.0
   Compiling libc v0.2.154
   Compiling autocfg v1.3.0
   Compiling version_check v0.9.4
   Compiling serde v1.0.200
    Checking once_cell v1.19.0
    Checking bytes v1.6.0
    Checking pin-project-lite v0.2.14
    Checking itoa v1.0.11
    Checking smallvec v1.13.2
   Compiling lock_api v0.4.12
   Compiling cc v1.0.96
   Compiling parking_lot_core v0.9.10
    Checking memchr v2.7.2
    Checking scopeguard v1.2.0
    Checking futures-core v0.3.30
    Checking subtle v2.5.0
    Checking getrandom v0.2.14
   Compiling quote v1.0.36
    Checking socket2 v0.5.7
    Checking mio v0.8.11
   Compiling syn v2.0.60
    Checking parking_lot v0.12.2
    Checking num_cpus v1.16.0
    Checking signal-hook-registry v1.4.2
    Checking futures-sink v0.3.30
   Compiling typenum v1.17.0
   Compiling slab v0.4.9
   Compiling generic-array v0.14.7
    Checking log v0.4.21
    Checking pin-utils v0.1.0
   Compiling num-traits v0.2.19
    Checking tinyvec_macros v0.1.1
    Checking futures-io v0.3.30
    Checking futures-task v0.3.30
    Checking tinyvec v1.6.0
   Compiling ring v0.17.8
   Compiling ahash v0.8.11
    Checking percent-encoding v2.3.1
    Checking unicode-bidi v0.3.15
    Checking rustls-pki-types v1.5.0
    Checking unicode-normalization v0.1.23
    Checking zerocopy v0.7.33
    Checking rand_core v0.6.4
    Checking tracing-core v0.1.32
   Compiling strsim v0.11.1
    Checking spin v0.9.8
   Compiling fnv v1.0.7
    Checking untrusted v0.9.0
    Checking allocator-api2 v0.2.18
   Compiling rustversion v1.0.15
   Compiling ident_case v1.0.1
    Checking base64 v0.22.1
    Checking http v1.1.0
    Checking hashbrown v0.14.5
   Compiling unicase v2.7.0
    Checking block-buffer v0.10.4
    Checking crypto-common v0.1.6
    Checking digest v0.10.7
    Checking http-body v1.0.0
    Checking form_urlencoded v1.2.1
    Checking byteorder v1.5.0
    Checking ppv-lite86 v0.2.17
   Compiling equivalent v1.0.1
    Checking cpufeatures v0.2.12
    Checking ryu v1.0.17
   Compiling rustls v0.23.5
    Checking num-integer v0.1.46
   Compiling psm v0.1.21
    Checking rand_chacha v0.3.1
    Checking futures-channel v0.3.30
   Compiling indexmap v2.2.6
    Checking base64 v0.21.7
    Checking zeroize v1.7.0
   Compiling heck v0.5.0
    Checking httpdate v1.0.3
    Checking finl_unicode v1.2.0
   Compiling winnow v0.6.18
    Checking mime v0.3.17
   Compiling httparse v1.8.0
   Compiling pq-sys v0.4.8
   Compiling either v1.13.0
    Checking stringprep v0.1.4
    Checking rand v0.8.5
    Checking num-bigint v0.4.6
    Checking sha2 v0.10.8
    Checking hmac v0.12.1
    Checking md-5 v0.10.6
   Compiling darling_core v0.20.10
   Compiling diesel_table_macro_syntax v0.2.0
    Checking rustls-pemfile v2.1.2
    Checking idna v0.5.0
   Compiling stacker v0.1.15
   Compiling num-conv v0.1.0
   Compiling time-core v0.1.2
    Checking siphasher v0.3.11
    Checking rustls-webpki v0.102.3
   Compiling serde_json v1.0.116
   Compiling thiserror v1.0.59
    Checking bitflags v2.5.0
    Checking tower-service v0.3.2
    Checking iana-time-zone v0.1.60
    Checking tower-layer v0.3.2
    Checking fallible-iterator v0.2.0
    Checking powerfmt v0.2.0
    Checking deranged v0.3.11
   Compiling serde_derive v1.0.200
   Compiling tokio-macros v2.2.0
   Compiling futures-macro v0.3.30
    Checking tokio v1.37.0
   Compiling tracing-attributes v0.1.27
    Checking futures-util v0.3.30
   Compiling darling_macro v0.20.10
   Compiling async-trait v0.1.80
   Compiling darling v0.20.10
   Compiling dsl_auto_type v0.1.2
   Compiling diesel_derives v2.2.2
    Checking tracing v0.1.40
    Checking postgres-protocol v0.6.6
   Compiling thiserror-impl v1.0.59
   Compiling pin-project-internal v1.1.5
    Checking chrono v0.4.38
    Checking phf_shared v0.11.2
   Compiling time-macros v0.2.18
    Checking tokio-util v0.7.11
    Checking deadpool-runtime v0.1.3
    Checking url v2.5.0
   Compiling mime_guess v2.0.4
   Compiling axum-core v0.4.3
    Checking http-body-util v0.1.1
    Checking openssl-probe v0.1.5
    Checking regex-syntax v0.8.3
    Checking regex-syntax v0.6.29
    Checking time v0.3.36
    Checking serde_spanned v0.6.7
    Checking toml_datetime v0.6.8
    Checking uuid v1.8.0
    Checking toml_edit v0.22.20
    Checking regex-automata v0.4.6
    Checking regex-automata v0.1.10
    Checking rustls-native-certs v0.7.1
    Checking hyper v1.3.1
    Checking combine v4.6.7
    Checking diesel v2.2.2
    Checking deadpool v0.12.1
    Checking tokio-rustls v0.26.0
    Checking phf v0.11.2
    Checking pin-project v1.1.5
    Checking postgres-types v0.2.6
   Compiling axum v0.7.5
    Checking overload v0.1.1
    Checking minimal-lexical v0.2.1
    Checking sha1_smol v1.0.0
    Checking lazy_static v1.4.0
    Checking base64ct v1.6.0
    Checking toml v0.8.19
    Checking sync_wrapper v0.1.2
   Compiling heck v0.4.1
    Checking arc-swap v1.7.1
    Checking whoami v1.5.1
    Checking tokio-postgres v0.7.10
    Checking migrations_internals v2.2.0
   Compiling axum-macros v0.4.1
    Checking password-hash v0.5.0
    Checking nom v7.1.3
    Checking sharded-slab v0.1.7
    Checking nu-ansi-term v0.46.0
   Compiling migrations_macros v2.2.0
    Checking tower v0.4.13
    Checking simple_asn1 v0.6.2
    Checking hyper-util v0.1.3
    Checking regex v1.10.4
    Checking chumsky v0.9.3
    Checking matchers v0.1.0
    Checking serde_urlencoded v0.7.1
    Checking serde_path_to_error v0.1.16
    Checking email_address v0.2.4
    Checking blake2 v0.10.6
    Checking email-encoding v0.3.0
    Checking pem v3.0.4
    Checking tracing-log v0.2.0
    Checking webpki-roots v0.26.1
    Checking scoped-futures v0.1.3
    Checking hostname v0.4.0
    Checking thread_local v1.1.8
   Compiling sso v0.1.0 (/tmp/nix-shell.uUVugk/aguss787_sso__saxr738)
    Checking fastrand v2.1.0
    Checking quoted_printable v0.5.0
    Checking http-range-header v0.4.1
    Checking sync_wrapper v1.0.1
    Checking matchit v0.7.3
    Checking tower-http v0.5.2
    Checking tracing-subscriber v0.3.18
    Checking jsonwebtoken v9.3.0
    Checking argon2 v0.5.3
    Checking dotenv v0.15.0
    Checking redis v0.26.1
    Checking lettre v0.11.7
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.2.2/src/query_builder/ast_pass.rs:220:51
    |
220 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
